Add Zona Rural radio input to form
Introduces a required radio button group for 'Zona Rural' with options 'Sim' and 'Não' to the form in index.html.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
         <input type="text" id="lastname" name="lastname" />
       </div>
 
+      <div>
+        <label>Zona Rural:*</label>
+        <div style="display: flex; gap: 20px; margin-top: 8px;">
+          <label style="display: flex; align-items: center; gap: 5px; font-weight: normal;">
+            <input type="radio" id="zona_rural_sim" name="zona_rural" value="true" required />
+            Sim
+          </label>
+          <label style="display: flex; align-items: center; gap: 5px; font-weight: normal;">
+            <input type="radio" id="zona_rural_nao" name="zona_rural" value="false" />
+            Não
+          </label>
+        </div>
+      </div>
+
       <button type="submit">Enviar</button>
     </form>
 
