--- a/simple_index.html
+++ b/simple_index.html
@@ -77,38 +77,13 @@
 
       <div>
         <label>Zona Rural:*</label>
-        <div style="display: flex; gap: 20px; margin-top: 8px">
-          <label
-            style="
-              display: flex;
-              align-items: center;
-              gap: 5px;
-              font-weight: normal;
-            "
-          >
-            <input
-              type="radio"
-              id="zona_rural_sim"
-              name="zona_rural"
-              value="true"
-              required
-            />
+        <div style="display: flex; gap: 20px; margin-top: 8px;">
+          <label style="display: flex; align-items: center; gap: 5px; font-weight: normal;">
+            <input type="radio" id="zona_rural_sim" name="zona_rural" value="true" required />
             Sim
           </label>
-          <label
-            style="
-              display: flex;
-              align-items: center;
-              gap: 5px;
-              font-weight: normal;
-            "
-          >
-            <input
-              type="radio"
-              id="zona_rural_nao"
-              name="zona_rural"
-              value="false"
-            />
+          <label style="display: flex; align-items: center; gap: 5px; font-weight: normal;">
+            <input type="radio" id="zona_rural_nao" name="zona_rural" value="false" />
             Não
           </label>
         </div>
@@ -133,9 +108,7 @@
     </div>
 
     <script>
-      // Inicializar _hsq
-      window._hsq = window._hsq || [];
-
+      // Apenas para mostrar mensagem de sucesso após submit
       document.addEventListener("DOMContentLoaded", function () {
         const form = document.getElementById("contactForm");
         const successMessage = document.getElementById("successMessage");
@@ -143,55 +116,18 @@
         form.addEventListener("submit", function (event) {
           event.preventDefault();
 
-          console.log("📝 Formulário submetido");
-
-          // Capturar os dados do formulário
-          const email = document.getElementById("email").value;
-          const firstname = document.getElementById("firstname").value;
-          const lastname = document.getElementById("lastname").value;
-          const zonaRuralRadio = document.querySelector(
-            'input[name="zona_rural"]:checked'
+          console.log(
+            "Formulário enviado - HubSpot tracking code deve capturar automaticamente"
           );
-          const zonaRural = zonaRuralRadio ? zonaRuralRadio.value : null;
 
-          // Montar objeto com os dados para o HubSpot
-          const hubspotData = {
-            email: email,
-            firstname: firstname,
-            lastname: lastname,
-            zona_rural: zonaRural,
-            phone: "+5541999999999",
-          };
+          // Mostrar mensagem de sucesso
+          successMessage.style.display = "block";
 
-          console.log("📊 Dados capturados:", hubspotData);
-
-          // Envia manualmente para o HubSpot usando identify
-          if (window._hsq) {
-            try {
-              window._hsq.push(["identify", hubspotData]);
-
-              console.log("✅ Dados enviados para HubSpot via identify");
-
-              // Rastrear visualização de página
-              window._hsq.push(["trackPageView"]);
-              console.log("✅ trackPageView enviado");
-
-              // Mostrar mensagem de sucesso
-              successMessage.style.display = "block";
-
-              // Resetar formulário após 3 segundos
-              setTimeout(() => {
-                form.reset();
-                successMessage.style.display = "none";
-              }, 3000);
-            } catch (error) {
-              console.error("❌ Erro ao enviar dados para HubSpot:", error);
-            }
-          } else {
-            console.error(
-              "❌ HubSpot tracking code (_hsq) não está disponível!"
-            );
-          }
+          // Resetar formulário após 3 segundos
+          setTimeout(() => {
+            form.reset();
+            successMessage.style.display = "none";
+          }, 3000);
         });
       });
 
