Add navigation links and update form buttons
Enabled navigation to tracking forms from index.html by updating button cards and linking to tracking-default-form.html and tracking-custom-form.html. Added 'Voltar' links to both tracking form pages for easier navigation back to the main page.

--- a/index.html
+++ b/index.html
@@ -117,16 +117,20 @@
           </div>
         </a>
 
-        <a href="#" class="button-card" style="opacity: 0.6; cursor: not-allowed;">
-          <div class="button-icon">📝</div>
-          <div class="button-title">Outro Formulário</div>
-          <div class="button-description">Em breve...</div>
+        <a href="tracking-default-form.html" class="button-card">
+          <div class="button-icon">📄</div>
+          <div class="button-title">Tracking Code - Padrão</div>
+          <div class="button-description">
+            Formulário com tracking code do HubSpot (captura automática)
+          </div>
         </a>
 
-        <a href="#" class="button-card" style="opacity: 0.6; cursor: not-allowed;">
-          <div class="button-icon">💼</div>
-          <div class="button-title">Mais Opções</div>
-          <div class="button-description">Em breve...</div>
+        <a href="tracking-custom-form.html" class="button-card">
+          <div class="button-icon">🧾</div>
+          <div class="button-title">Tracking Code - Identity</div>
+          <div class="button-description">
+            Formulário com envio manual via window._hsq.push(['identify'])
+          </div>
         </a>
       </div>
     </div>
