--- a/tracking-custom-form.html
+++ b/tracking-custom-form.html
@@ -115,6 +115,10 @@
       </div>
 
       <button type="submit">Enviar</button>
+      
+      <div style="text-align: center; margin-top: 20px;">
+        <a href="index.html" style="color: #ff7a59; text-decoration: none; font-weight: bold;">← Voltar</a>
+      </div>
     </form>
 
     <div
