Add CNPJ auto-fill form with HubSpot integration
Introduces formulario-cnpj.html, a new form that fetches company data from the CNPJá API based on CNPJ input and submits it to HubSpot. Also adds a navigation card for this form to index.html.

--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
             Formulário com envio manual via window._hsq.push(['identify'])
           </div>
         </a>
+
+        <a href="formulario-cnpj.html" class="button-card">
+          <div class="button-icon">🏢</div>
+          <div class="button-title">Consulta CNPJ</div>
+          <div class="button-description">
+            Formulário com consulta automática de CNPJ via API CNPJá
+          </div>
+        </a>
       </div>
     </div>
   </body>
